--- a/login.html
+++ b/login.html
@@ -18,11 +18,15 @@
 <body>
     <div class="login-card"><img src="assets/img/avatar_2x.png" class="profile-img-card">
         <p class="profile-name-card"> </p>
-        <form class="form-signin"><span class="reauth-email"> </span><input class="form-control" type="email" required="" placeholder="Email address" autofocus="" id="inputEmail"><input class="form-control" type="password" required="" placeholder="Password" id="inputPassword">
+    <form class="form-signin"><span class="reauth-email"> </span><input class="form-control" type="email" required="" placeholder="Email address" autofocus="" id="inputEmail"><input class="form-control" type="password" required="" placeholder="Password" id="inputPassword">
             <div
                 class="checkbox">
                 <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-1"></div>
-    </div><button class="btn btn-primary btn-block btn-lg btn-signin" type="submit">Sign in</button></form><a href="#" class="forgot-password">Forgot your password?</a></div>
+    </div><button class="btn btn-primary btn-block btn-lg btn-signin" type="submit">Sign in</button>
+    </form>
+    <a href="#" class="forgot-password">Forgot your password?</a>
+    </div>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/Profile-Edit-Form.js"></script>
