--- a/login.html
+++ b/login.html
@@ -18,7 +18,8 @@
 <body>
     <div class="login-card"><img src="assets/img/avatar_2x.png" class="profile-img-card">
         <p class="profile-name-card"> </p>
-    <form class="form-signin"><span class="reauth-email"> </span><input class="form-control" type="email" required="" placeholder="Email address" autofocus="" id="inputEmail"><input class="form-control" type="password" required="" placeholder="Password" id="inputPassword">
+    <form class="form-signin" action="login.php" method="post"><span class="reauth-email"> </span>
+        <input class="form-control" type="email" required="" placeholder="Email address" autofocus="" id="inputEmail" name="inputEmail"><input class="form-control" type="password" required="" placeholder="Password" id="inputPassword" name="inputPassword">
             <div
                 class="checkbox">
                 <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-1"></div>
